# ClientServerModelWindowsSocketApplication

./: CMakeLists.txt  Client.cpp  Client.h  HelperFunctions.h  README.md  Server.cpp  Server.h  WinSockFunctions.h  main.cpp
src/apps/: client_main.cpp  server_main.cpp
src/core/: Client.cpp  Server.cpp
src/include/: Client.h  NetworkTypes.h  Server.h  SocketWrapper.h  WinSockFunctions.h
